--- a/css/wcus.css
+++ b/css/wcus.css
@@ -10,35 +10,14 @@ Colors set by Global Styles:
 --wp--preset--color--custom-light-pink: #ffadda;
 --wp--preset--color--custom-grass-green: #5ab567;
 --wp--preset--color--custom-bright-green: #c1cd42;
+
+--wp--preset--font-family--tilt-warp: 'Tilt Warp';
+--wp--preset--font-family--nunito: Nunito;
 */
 
-:root {
-	--wp--preset--font-family--nunito: "Nunito", -apple-system, "BlinkMacSystemFont", "Segoe UI", "Roboto", "Oxygen-Sans", "Ubuntu", "Cantarell", "Helvetica Neue", sans-serif;
-	--wp--preset--font-family--tilt-warp: "Tilt Warp", sans-serif;
-}
-
-body,
-.has-nunito-font-family {
-	font-family: var(--wp--preset--font-family--nunito);
+body {
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-.wp-block-button,
-header.wp-block-template-part .wp-block-navigation,
-.has-tilt-warp-font-family {
-	font-family: var(--wp--preset--font-family--tilt-warp);
-}
-
-.wp-element-button:visited,
-.wp-block-button__link:visited {
-	color: var(--wp--preset--color--base);
 }
 
 .is-archive-header {
@@ -46,10 +25,10 @@ header.wp-block-template-part .wp-block-navigation,
 	background-repeat: no-repeat;
 	background-position: top right;
 	background-size: clamp(7.5rem, 25vw, 15rem);
+}
 
-	& .wp-block-query-title span {
-		display: block;
-	}
+.is-archive-header .wp-block-query-title span {
+	display: block;
 }
 
 /* Remove the top-level block gap between template sections. */
