--- a/community-summit.css
+++ b/community-summit.css
@@ -26,7 +26,7 @@ body {
 }
 
 .is-archive-header {
-	background-image: url(https://wc-us.org/wp-content/uploads/2023/04/wpcs-archive-header.svg);
+	background-image: url(https://wc-us.org/wp-content/uploads/2023/04/archive-header.svg);
 	background-repeat: no-repeat;
 	background-position: top right;
 	background-size: clamp(7.5rem, 25vw, 15rem);
@@ -45,4 +45,93 @@ body {
 
 .wp-site-blocks > * + * {
 	margin-block-start: 0;
+}
+
+/* Tickets form */
+
+#tix {
+	max-width: var(--wp--style--global--wide-size);
+}
+
+#tix .tix-ticket-form,
+	#tix .tix-tickets-list,
+	#tix .tix-order-summary {
+		border-spacing: 0;
+		border-collapse: collapse;
+		width: 100%;
+		max-width: var(--wp--style--global--content-size);
+		margin-left: auto;
+		margin-right: auto;
+	}
+
+#tix .tix-ticket-form thead th, #tix .tix-tickets-list thead th, #tix .tix-order-summary thead th {
+			border-bottom: 1px solid var(--wp--preset--color--custom-grass-green);
+		}
+
+#tix .tix-ticket-form th,
+		#tix .tix-tickets-list th,
+		#tix .tix-order-summary th,
+		#tix .tix-ticket-form td,
+		#tix .tix-tickets-list td,
+		#tix .tix-order-summary td {
+			padding: 0.5em;
+		}
+
+#tix .tix-submit .tix-checkout-button {
+		text-transform: none;
+		letter-spacing: 0;
+		border-radius: 2px;
+		padding: 0.5rem 1rem;
+		background: var(--wp--preset--color--secondary);
+		color: var(--wp--preset--color--white);
+		font-size: 1.125rem;
+		font-family: var(--wp--preset--font-family--tilt-warp);
+	}
+
+#tix .tix-submit .tix-checkout-button:hover,
+		#tix .tix-submit .tix-checkout-button:focus {
+			background: var(--wp--preset--color--contrast);
+		}
+
+.tix-column-price,
+.tix-column-per-ticket,
+.tix-column-remaining,
+.tix-column-quantity,
+.tix-row-total {
+	text-align: right;
+}
+
+.tix-ticket-form input[type="text"],
+	.tix-private-form input[type="text"],
+	.tix-attendee-form input[type="text"],
+	.tix-receipt-form input[type="text"],
+	.tix-ticket-form input[type="email"],
+	.tix-private-form input[type="email"],
+	.tix-attendee-form input[type="email"],
+	.tix-receipt-form input[type="email"],
+	.tix-ticket-form input[type="url"],
+	.tix-private-form input[type="url"],
+	.tix-attendee-form input[type="url"],
+	.tix-receipt-form input[type="url"],
+	.tix-ticket-form textarea,
+	.tix-private-form textarea,
+	.tix-attendee-form textarea,
+	.tix-receipt-form textarea {
+		padding: 0.5em;
+	}
+
+.tix-ticket-form select, .tix-private-form select, .tix-attendee-form select, .tix-receipt-form select {
+		padding: 0.5em;
+	}
+
+.tix-ticket-form tr > *, .tix-private-form tr > *, .tix-attendee-form tr > *, .tix-receipt-form tr > * {
+		padding-bottom: 1em;
+	}
+
+.tix-ticket-form .tix-right, .tix-private-form .tix-right, .tix-attendee-form .tix-right, .tix-receipt-form .tix-right {
+		padding-left: 2em;
+	}
+
+.is-archive-header {
+	background-image: url(https://wc-us.org/wp-content/uploads/2023/04/wpcs-archive-header.svg);
 }
