--- a/wcus.css
+++ b/wcus.css
@@ -20,6 +20,24 @@ body {
 	-moz-osx-font-smoothing: grayscale;
 }
 
+a:focus-visible,
+input:focus-visible,
+select:focus-visible,
+textarea:focus-visible,
+button:focus-visible,
+.contact-form-dropdown__button:focus-visible {
+	outline: 2px dotted var(--wp--preset--color--primary);
+	outline-offset: 2px;
+}
+
+.has-base-color :is(a:focus-visible,input:focus-visible,select:focus-visible,textarea:focus-visible,button:focus-visible,.contact-form-dropdown__button:focus-visible) {
+		outline-color: var(--wp--preset--color--base);
+	}
+
+.wp-block-post-content a:where(:not(.wp-element-button)):focus-visible {
+	outline-color: var(--wp--preset--color--secondary);
+}
+
 .wp-element-button:visited,
 .wp-block-button__link:visited {
 	color: var(--wp--preset--color--base);
