--- a/css/community-summit.css
+++ b/css/community-summit.css
@@ -1,6 +1,15 @@
 @import "includes/base.css";
 @import "includes/tickets.css";
 
+a:focus-visible,
+input:focus-visible,
+select:focus-visible,
+textarea:focus-visible,
+button:focus-visible,
+.contact-form-dropdown__button:focus-visible {
+	outline-color: var(--wp--preset--color--secondary);
+}
+
 .is-archive-header {
 	background-image: url(https://wc-us.org/wp-content/uploads/2023/04/wpcs-archive-header.svg);
 }
