Ticket form: Add responsive style, update spacing for longer questions

--- a/community-summit.css
+++ b/community-summit.css
@@ -156,6 +156,67 @@ button:focus-visible,
 			padding: 0.5em;
 		}
 
+#tix .tix-attendee-form {
+		border-spacing: 0;
+		border-collapse: collapse;
+	}
+
+#tix .tix-attendee-form .tix-right {
+			vertical-align: middle;
+		}
+
+#tix .tix-attendee-form fieldset label {
+			display: inline-block;
+			margin-bottom: 0.5em;
+			font-size: 1rem;
+			vertical-align: middle;
+		}
+
+#tix .tix-attendee-form fieldset label input {
+				margin-right: 0.5rem;
+			}
+
+@media (max-width: 600px) {
+
+			#tix .tix-attendee-form,
+			#tix .tix-attendee-form tr,
+			#tix .tix-attendee-form td,
+			#tix .tix-attendee-form th {
+				display: block;
+				width: 100%;
+			}
+
+			#tix .tix-attendee-form .tix-left {
+				padding-bottom: 0;
+				margin-bottom: 0.25rem;
+			}
+
+			#tix .tix-attendee-form .tix-right {
+				padding-left: 0;
+			}
+
+			#tix .tix-attendee-form input[type="text"],
+			#tix .tix-attendee-form input[type="email"],
+			#tix .tix-attendee-form input[type="url"],
+			#tix .tix-attendee-form textarea,
+			#tix .tix-attendee-form {
+				width: 100%;
+				box-sizing: border-box;
+			}
+
+			#tix .tix-attendee-form fieldset {
+				margin-top: 0.5rem;
+			}
+
+			#tix .tix-attendee-form fieldset label {
+				font-size: inherit;
+			}
+		}
+
+#tix .tix-submit {
+		margin-bottom: var(--wp--preset--spacing--50);
+	}
+
 #tix .tix-submit .tix-checkout-button {
 		text-transform: none;
 		letter-spacing: 0;
