--- a/css/includes/attendees.css
+++ b/css/includes/attendees.css
@@ -10,7 +10,7 @@
 		@media (min-width: 400px) {
 			display: grid;
 			grid-template-columns: repeat(2, 1fr);
-			gap: 2rem;
+			gap: 4rem 2rem;
 
 			& li {
 				margin-bottom: 0;
@@ -31,6 +31,66 @@
 		height: auto;
 		width: auto !important;
 		float: none;
+		position: relative;
+
+		&::before {
+			content: "";
+			display: inline-block;
+			position: absolute;
+			inset: 0;
+			margin: 0 auto;
+			height: 96px;
+			width: 96px;
+			z-index: -1;
+		}
+
+		&:nth-of-type(12n)::before,
+		&:nth-of-type(12n + 6)::before,
+		&:nth-of-type(12n + 9)::before {
+			border-radius: 96px 0 0 0;
+		}
+
+		&:nth-of-type(12n + 1)::before,
+		&:nth-of-type(12n + 4)::before,
+		&:nth-of-type(12n + 8)::before {
+			border-radius: 0 96px 0 0;
+		}
+
+		&:nth-of-type(12n + 2)::before,
+		&:nth-of-type(12n + 7)::before,
+		&:nth-of-type(12n + 10)::before {
+			border-radius: 0 0 96px 0;
+		}
+
+		&:nth-of-type(12n + 3)::before,
+		&:nth-of-type(12n + 5)::before,
+		&:nth-of-type(12n + 11)::before {
+			border-radius: 0 0 0 96px;
+		}
+
+		&:nth-of-type(6n)::before {
+			background-color: var(--wp--preset--color--primary);
+		}
+
+		&:nth-of-type(6n + 1)::before {
+			background-color: var(--wp--preset--color--custom-grass-green);
+		}
+
+		&:nth-of-type(6n + 2)::before {
+			background-color: var(--wp--preset--color--custom-medium-pink);
+		}
+
+		&:nth-of-type(6n + 3)::before {
+			background-color: var(--wp--preset--color--custom-bright-green);
+		}
+
+		&:nth-of-type(6n + 4)::before {
+			background-color: var(--wp--preset--color--custom-bright-pink);
+		}
+
+		&:nth-of-type(6n + 5)::before {
+			background-color: var(--wp--preset--color--custom-light-pink);
+		}
 	}
 
 	& .avatar {
