--- a/wcus.css
+++ b/wcus.css
@@ -82,7 +82,7 @@ button:focus-visible,
 #tix-attendees ul {
 			display: grid;
 			grid-template-columns: repeat(2, 1fr);
-			gap: 2rem;
+			gap: 4rem 2rem;
 	}
 
 			#tix-attendees ul li {
@@ -109,7 +109,67 @@ button:focus-visible,
 		height: auto;
 		width: auto !important;
 		float: none;
+		position: relative;
 	}
+
+#tix-attendees li::before {
+			content: "";
+			display: inline-block;
+			position: absolute;
+			inset: 0;
+			margin: 0 auto;
+			height: 96px;
+			width: 96px;
+			z-index: -1;
+		}
+
+#tix-attendees li:nth-of-type(12n)::before,
+		#tix-attendees li:nth-of-type(12n + 6)::before,
+		#tix-attendees li:nth-of-type(12n + 9)::before {
+			border-radius: 96px 0 0 0;
+		}
+
+#tix-attendees li:nth-of-type(12n + 1)::before,
+		#tix-attendees li:nth-of-type(12n + 4)::before,
+		#tix-attendees li:nth-of-type(12n + 8)::before {
+			border-radius: 0 96px 0 0;
+		}
+
+#tix-attendees li:nth-of-type(12n + 2)::before,
+		#tix-attendees li:nth-of-type(12n + 7)::before,
+		#tix-attendees li:nth-of-type(12n + 10)::before {
+			border-radius: 0 0 96px 0;
+		}
+
+#tix-attendees li:nth-of-type(12n + 3)::before,
+		#tix-attendees li:nth-of-type(12n + 5)::before,
+		#tix-attendees li:nth-of-type(12n + 11)::before {
+			border-radius: 0 0 0 96px;
+		}
+
+#tix-attendees li:nth-of-type(6n)::before {
+			background-color: var(--wp--preset--color--primary);
+		}
+
+#tix-attendees li:nth-of-type(6n + 1)::before {
+			background-color: var(--wp--preset--color--custom-grass-green);
+		}
+
+#tix-attendees li:nth-of-type(6n + 2)::before {
+			background-color: var(--wp--preset--color--custom-medium-pink);
+		}
+
+#tix-attendees li:nth-of-type(6n + 3)::before {
+			background-color: var(--wp--preset--color--custom-bright-green);
+		}
+
+#tix-attendees li:nth-of-type(6n + 4)::before {
+			background-color: var(--wp--preset--color--custom-bright-pink);
+		}
+
+#tix-attendees li:nth-of-type(6n + 5)::before {
+			background-color: var(--wp--preset--color--custom-light-pink);
+		}
 
 #tix-attendees .avatar {
 		margin: 0 auto 0.5rem;
