--- a/css/includes/base.css
+++ b/css/includes/base.css
@@ -97,3 +97,42 @@ button:focus-visible,
 .wp-block-jetpack-contact-form .wp-block-group > * + * {
 	margin-block-start: 0.5em;
 }
+
+/*
+ * Fix spacing in post-template grid. We can't control this in the UI, so we'll set it here.
+ *
+ * Add responsive handling:
+ *  - Drop 4 cols to 2 at 1100px.
+ *  - Drop 3 cols to 2 at 900px.
+ *  - Drop all to one col at 480px.
+ */
+.wp-block-post-template.is-flex-container.is-flex-container {
+	gap: 2.5rem;
+
+	&.columns-2 > li {
+		width: calc(50% - 2.5rem / 2);
+	}
+
+	&.columns-3 > li {
+		width: calc(33.3333% - 5rem / 3);
+
+		@media (max-width: 900px) {
+			width: calc(50% - 2.5rem / 2);
+		}
+	}
+
+	&.columns-4 > li {
+		width: calc(25% - 7.5rem / 4);
+
+		@media (max-width: 1100px) {
+			width: calc(50% - 2.5rem / 2);
+		}
+	}
+
+	@media (max-width: 480px) {
+
+		&[class*="columns"] > li {
+			width: 100%;
+		}
+	}
+}
