--- a/community-summit.css
+++ b/community-summit.css
@@ -97,6 +97,10 @@ button:focus-visible,
 	margin-block-start: 0.5em;
 }
 
+.is-justify-center > .wp-block-post-template {
+	justify-content: center;
+}
+
 /*
  * Fix spacing in post-template grid. We can't control this in the UI, so we'll set it here.
  *
@@ -106,39 +110,39 @@ button:focus-visible,
  *  - Drop all to one col at 480px.
  */
 
-.wp-block-post-template.is-flex-container.is-flex-container {
+.wp-block-post-template.is-layout-grid.is-layout-grid {
 	gap: 2.5rem;
 }
 
-.wp-block-post-template.is-flex-container.is-flex-container.columns-2 > li {
+.wp-block-post-template.is-layout-grid.is-layout-grid.columns-2 > li {
 		width: calc(50% - 2.5rem / 2);
 	}
 
-.wp-block-post-template.is-flex-container.is-flex-container.columns-3 > li {
+.wp-block-post-template.is-layout-grid.is-layout-grid.columns-3 > li {
 		width: calc(33.3333% - 5rem / 3);
 	}
 
 @media (max-width: 900px) {
 
-.wp-block-post-template.is-flex-container.is-flex-container.columns-3 > li {
+.wp-block-post-template.is-layout-grid.is-layout-grid.columns-3 > li {
 			width: calc(50% - 2.5rem / 2);
 	}
 		}
 
-.wp-block-post-template.is-flex-container.is-flex-container.columns-4 > li {
+.wp-block-post-template.is-layout-grid.is-layout-grid.columns-4 > li {
 		width: calc(25% - 7.5rem / 4);
 	}
 
 @media (max-width: 1100px) {
 
-.wp-block-post-template.is-flex-container.is-flex-container.columns-4 > li {
+.wp-block-post-template.is-layout-grid.is-layout-grid.columns-4 > li {
 			width: calc(50% - 2.5rem / 2);
 	}
 		}
 
 @media (max-width: 480px) {
 
-		.wp-block-post-template.is-flex-container.is-flex-container[class*="columns"] > li {
+		.wp-block-post-template.is-layout-grid.is-layout-grid[class*="columns"] > li {
 			width: 100%;
 		}
 	}
