--- a/community-summit.css
+++ b/community-summit.css
@@ -114,36 +114,24 @@ button:focus-visible,
 	gap: 2.5rem;
 }
 
-.wp-block-post-template.is-layout-grid.is-layout-grid.columns-2 > li {
-		width: calc(50% - 2.5rem / 2);
-	}
-
-.wp-block-post-template.is-layout-grid.is-layout-grid.columns-3 > li {
-		width: calc(33.3333% - 5rem / 3);
-	}
-
 @media (max-width: 900px) {
 
-.wp-block-post-template.is-layout-grid.is-layout-grid.columns-3 > li {
-			width: calc(50% - 2.5rem / 2);
+.wp-block-post-template.is-layout-grid.is-layout-grid.columns-3 {
+			grid-template-columns: repeat(2, minmax(0, 1fr));
 	}
 		}
 
-.wp-block-post-template.is-layout-grid.is-layout-grid.columns-4 > li {
-		width: calc(25% - 7.5rem / 4);
-	}
-
 @media (max-width: 1100px) {
 
-.wp-block-post-template.is-layout-grid.is-layout-grid.columns-4 > li {
-			width: calc(50% - 2.5rem / 2);
+.wp-block-post-template.is-layout-grid.is-layout-grid.columns-4 {
+			grid-template-columns: repeat(3, minmax(0, 1fr));
 	}
 		}
 
 @media (max-width: 480px) {
 
-		.wp-block-post-template.is-layout-grid.is-layout-grid[class*="columns"] > li {
-			width: 100%;
+		.wp-block-post-template.is-layout-grid.is-layout-grid[class*="columns"] {
+			grid-template-columns: 1;
 		}
 	}
 
