--- a/css/includes/base.css
+++ b/css/includes/base.css
@@ -113,30 +113,22 @@ button:focus-visible,
 .wp-block-post-template.is-layout-grid.is-layout-grid {
 	gap: 2.5rem;
 
-	&.columns-2 > li {
-		width: calc(50% - 2.5rem / 2);
-	}
-
-	&.columns-3 > li {
-		width: calc(33.3333% - 5rem / 3);
-
+	&.columns-3 {
 		@media (max-width: 900px) {
-			width: calc(50% - 2.5rem / 2);
+			grid-template-columns: repeat(2, minmax(0, 1fr));
 		}
 	}
 
-	&.columns-4 > li {
-		width: calc(25% - 7.5rem / 4);
-
+	&.columns-4 {
 		@media (max-width: 1100px) {
-			width: calc(50% - 2.5rem / 2);
+			grid-template-columns: repeat(3, minmax(0, 1fr));
 		}
 	}
 
 	@media (max-width: 480px) {
 
-		&[class*="columns"] > li {
-			width: 100%;
+		&[class*="columns"] {
+			grid-template-columns: 1;
 		}
 	}
 }
