--- a/wcus.css
+++ b/wcus.css
@@ -97,10 +97,6 @@ button:focus-visible,
 	margin-block-start: 0.5em;
 }
 
-.is-justify-center > .wp-block-post-template {
-	justify-content: center;
-}
-
 /*
  * Fix spacing in post-template grid. We can't control this in the UI, so we'll set it here.
  *
@@ -124,14 +120,14 @@ button:focus-visible,
 @media (max-width: 1100px) {
 
 .wp-block-post-template.is-layout-grid.is-layout-grid.columns-4 {
-			grid-template-columns: repeat(3, minmax(0, 1fr));
+			grid-template-columns: repeat(2, minmax(0, 1fr));
 	}
 		}
 
 @media (max-width: 480px) {
 
 		.wp-block-post-template.is-layout-grid.is-layout-grid[class*="columns"] {
-			grid-template-columns: 1;
+			grid-template-columns: minmax(0, 1fr);
 		}
 	}
 
