--- a/css/includes/people.css
+++ b/css/includes/people.css
@@ -1,4 +1,5 @@
-body.page-slug-organizers {
+body.page-slug-organizers,
+body.page-slug-speakers {
 
 	& .wp-block-post-template.is-flex-container {
 		justify-content: center;
@@ -60,5 +61,22 @@ body.single-wcb_organizer {
 
 	& .wp-block-post-content .wp-block-read-more {
 		display: none;
+	}
+}
+
+body.single-wcb_speaker {
+
+	& .wp-block-wordcamp-avatar {
+		max-width: 100%;
+		height: auto !important;
+		border-radius: 0 0 25%;
+		overflow: hidden;
+		border-style: solid;
+		border-width: 0 0 10px 0;
+		border-color: var(--wp--preset--color--custom-medium-pink);
+
+		& img {
+			vertical-align: middle;
+		}
 	}
 }
