--- a/css/wcus.css
+++ b/css/wcus.css
@@ -1,4 +1,4 @@
 @import "includes/base.css";
 @import "includes/attendees.css";
 @import "includes/tickets.css";
-@import "includes/organizers.css";
+@import "includes/people.css";
