Add a custom class for speaker grids

--- a/community-summit.css
+++ b/community-summit.css
@@ -386,11 +386,11 @@ button:focus-visible,
 		padding-left: 2em;
 	}
 
-body.page-slug-organizers .wp-block-post-template.is-flex-container, body.page-slug-speakers .wp-block-post-template.is-flex-container {
+:is(body.page-slug-organizers,body.page-slug-speakers,.wcus-speaker-grid) .wp-block-post-template.is-flex-container {
 		justify-content: center;
 	}
 
-body.page-slug-organizers .wp-block-wordcamp-avatar, body.page-slug-speakers .wp-block-wordcamp-avatar {
+:is(body.page-slug-organizers,body.page-slug-speakers,.wcus-speaker-grid) .wp-block-wordcamp-avatar {
 		max-width: 100%;
 		height: auto !important;
 		border-radius: 0 0 25%;
@@ -399,50 +399,46 @@ body.page-slug-organizers .wp-block-wordcamp-avatar, body.page-slug-speakers .wp
 		border-width: 0 0 10px 0;
 	}
 
-body.page-slug-organizers .wp-block-wordcamp-avatar img, body.page-slug-speakers .wp-block-wordcamp-avatar img {
+:is(body.page-slug-organizers,body.page-slug-speakers,.wcus-speaker-grid) .wp-block-wordcamp-avatar img {
 			vertical-align: middle;
 		}
 
-body.page-slug-organizers .wp-block-post:nth-of-type(5n) .wp-block-wordcamp-avatar, body.page-slug-speakers .wp-block-post:nth-of-type(5n) .wp-block-wordcamp-avatar {
+:is(body.page-slug-organizers,body.page-slug-speakers,.wcus-speaker-grid) .wp-block-post:nth-of-type(5n) .wp-block-wordcamp-avatar {
 		border-color: var(--wp--preset--color--custom-medium-pink);
 	}
 
-body.page-slug-organizers .wp-block-post:nth-of-type(5n + 1) .wp-block-wordcamp-avatar, body.page-slug-speakers .wp-block-post:nth-of-type(5n + 1) .wp-block-wordcamp-avatar {
+:is(body.page-slug-organizers,body.page-slug-speakers,.wcus-speaker-grid) .wp-block-post:nth-of-type(5n + 1) .wp-block-wordcamp-avatar {
 		border-color: var(--wp--preset--color--custom-grass-green);
 	}
 
-body.page-slug-organizers .wp-block-post:nth-of-type(5n + 2) .wp-block-wordcamp-avatar, body.page-slug-speakers .wp-block-post:nth-of-type(5n + 2) .wp-block-wordcamp-avatar {
+:is(body.page-slug-organizers,body.page-slug-speakers,.wcus-speaker-grid) .wp-block-post:nth-of-type(5n + 2) .wp-block-wordcamp-avatar {
 		border-color: var(--wp--preset--color--custom-bright-pink);
 	}
 
-body.page-slug-organizers .wp-block-post:nth-of-type(5n + 3) .wp-block-wordcamp-avatar, body.page-slug-speakers .wp-block-post:nth-of-type(5n + 3) .wp-block-wordcamp-avatar {
+:is(body.page-slug-organizers,body.page-slug-speakers,.wcus-speaker-grid) .wp-block-post:nth-of-type(5n + 3) .wp-block-wordcamp-avatar {
 		border-color: var(--wp--preset--color--custom-bright-green);
 	}
 
-body.page-slug-organizers .wp-block-post:nth-of-type(5n + 4) .wp-block-wordcamp-avatar, body.page-slug-speakers .wp-block-post:nth-of-type(5n + 4) .wp-block-wordcamp-avatar {
+:is(body.page-slug-organizers,body.page-slug-speakers,.wcus-speaker-grid) .wp-block-post:nth-of-type(5n + 4) .wp-block-wordcamp-avatar {
 		border-color: var(--wp--preset--color--custom-light-pink);
 	}
 
-body.page-slug-organizers .wp-block-read-more, body.page-slug-speakers .wp-block-read-more {
+:is(body.page-slug-organizers,body.page-slug-speakers,.wcus-speaker-grid) .wp-block-read-more {
 		text-decoration: underline;
 	}
 
-body.page-slug-organizers .wp-block-read-more:hover,
-		body.page-slug-speakers .wp-block-read-more:hover,
-		body.page-slug-organizers .wp-block-read-more:active,
-		body.page-slug-speakers .wp-block-read-more:active {
+:is(body.page-slug-organizers,body.page-slug-speakers,.wcus-speaker-grid) .wp-block-read-more:hover,
+		:is(body.page-slug-organizers,body.page-slug-speakers,.wcus-speaker-grid) .wp-block-read-more:active {
 			text-decoration: none;
 		}
 
-body.page-slug-organizers .wp-block-read-more:focus, body.page-slug-speakers .wp-block-read-more:focus {
+:is(body.page-slug-organizers,body.page-slug-speakers,.wcus-speaker-grid) .wp-block-read-more:focus {
 			-webkit-text-decoration: underline dashed;
 			        text-decoration: underline dashed;
 		}
 
-body.page-slug-organizers .wp-block-read-more .screen-reader-text,
-		body.page-slug-speakers .wp-block-read-more .screen-reader-text,
-		:is(body.page-slug-organizers .wp-block-read-more) ~ *,
-		:is(body.page-slug-speakers .wp-block-read-more) ~ * {
+:is(body.page-slug-organizers,body.page-slug-speakers,.wcus-speaker-grid) .wp-block-read-more .screen-reader-text,
+		:is(:is(body.page-slug-organizers,body.page-slug-speakers,.wcus-speaker-grid) .wp-block-read-more) ~ * {
 			display: none;
 		}
 
