--- a/css/wcus.css
+++ b/css/wcus.css
@@ -2,3 +2,4 @@
 @import "includes/attendees.css";
 @import "includes/tickets.css";
 @import "includes/people.css";
+@import "includes/schedule.css";
