--- a/wcus.css
+++ b/wcus.css
@@ -54,6 +54,21 @@ button:focus-visible,
 	display: block;
 }
 
+/* Update page headers on small screens. */
+
+@media (max-width: 599px) {
+
+	main > .wp-block-cover:first-child {
+		min-height: 0;
+		padding: var(--wp--preset--spacing--60) 0;
+		background-color: #feeaf6;
+	}
+
+		main > .wp-block-cover:first-child img {
+			display: none;
+		}
+}
+
 /* Remove the top-level block gap between template sections. */
 
 .wp-site-blocks {
